@@ -33,20 +33,11 @@
 #include "../../include/ultradfg.h"
 #include "../zenwinx/zenwinx.h"
 
-#define FS_ATTRIBUTE_BUFFER_SIZE (MAX_PATH * sizeof(WCHAR) + sizeof(FILE_FS_ATTRIBUTE_INFORMATION))
-#define INTERNAL_SEM_FAILCRITICALERRORS 0
-
 volume_info v[MAX_DOS_DRIVES + 1];
-BOOL nt4_system = FALSE; /* TRUE for nt 4.0 */
 
-BOOL get_drive_map(PROCESS_DEVICEMAP_INFORMATION *pProcessDeviceMapInfo);
-BOOL internal_open_rootdir(unsigned char letter,HANDLE *phFile);
-BOOL internal_validate_volume(unsigned char letter,int skip_removable,
-							  char *fsname,
-							  PROCESS_DEVICEMAP_INFORMATION *pProcessDeviceMapInfo,
-							  FILE_FS_SIZE_INFORMATION *pFileFsSize,
-							  int *is_removable);
-BOOL set_error_mode(UINT uMode);
+int internal_validate_volume(unsigned char letter,int skip_removable,
+							  int *is_removable,char *fsname,
+							  LARGE_INTEGER *ptotal, LARGE_INTEGER *pfree);
 
 /****f* udefrag.volume/udefrag_get_avail_volumes
 * NAME
@@ -83,46 +74,32 @@ BOOL set_error_mode(UINT uMode);
 ******/
 int __stdcall udefrag_get_avail_volumes(volume_info **vol_info,int skip_removable)
 {
-	PROCESS_DEVICEMAP_INFORMATION ProcessDeviceMapInfo;
-	ULONG drive_map;
 	ULONG i, index;
 	char letter;
-	int is_removable = FALSE;
-	FILE_FS_SIZE_INFORMATION FileFsSize;
 
 	/* get full list of volumes */
 	*vol_info = v;
-	if(!nt4_system)
-		if(!get_drive_map(&ProcessDeviceMapInfo)) goto get_volumes_fail;
 	/* set error mode to ignore missing removable drives */
-	if(!set_error_mode(INTERNAL_SEM_FAILCRITICALERRORS)) goto get_volumes_fail;
-	drive_map = ProcessDeviceMapInfo.Query.DriveMap;
+	if(winx_set_system_error_mode(INTERNAL_SEM_FAILCRITICALERRORS) < 0)
+		return (-1);
 	index = 0;
 	for(i = 0; i < MAX_DOS_DRIVES; i++){
-		if((drive_map & (1 << i)) || nt4_system){
-			letter = 'A' + (char)i;
-			if(!internal_validate_volume(letter,skip_removable,v[index].fsname,
-				&ProcessDeviceMapInfo,&FileFsSize,&is_removable)){
-					winx_pop_error(NULL,0);
-					continue;
-			}
-			v[index].total_space.QuadPart = FileFsSize.TotalAllocationUnits.QuadPart * \
-				FileFsSize.SectorsPerAllocationUnit * FileFsSize.BytesPerSector;
-			v[index].free_space.QuadPart = FileFsSize.AvailableAllocationUnits.QuadPart * \
-				FileFsSize.SectorsPerAllocationUnit * FileFsSize.BytesPerSector;
-			v[index].letter = letter;
-			v[index].is_removable = is_removable;
-			index ++;
+		letter = 'A' + (char)i;
+		if(internal_validate_volume(letter, skip_removable,
+			 &(v[index].is_removable), v[index].fsname,
+			 &(v[index].total_space), &(v[index].free_space)) < 0){
+				winx_pop_error(NULL,0);
+				continue;
 		}
+		v[index].letter = letter;
+		index ++;
 	}
 	v[index].letter = 0;
 	/* try to restore error mode to default state */
-	if(!set_error_mode(1)){ /* equal to SetErrorMode(0) */
+	if(winx_set_system_error_mode(1) < 0){ /* equal to SetErrorMode(0) */
 		winx_pop_error(NULL,0);
 	}
 	return 0;
-get_volumes_fail:
-	return (-1);
 }
 
 /****f* udefrag.volume/udefrag_validate_volume
@@ -152,190 +129,58 @@ get_volumes_fail:
 ******/
 int __stdcall udefrag_validate_volume(unsigned char letter,int skip_removable)
 {
-	PROCESS_DEVICEMAP_INFORMATION ProcessDeviceMapInfo;
-	FILE_FS_SIZE_INFORMATION FileFsSize;
 	int is_removable;
 
-	letter = (unsigned char)toupper((int)letter);
-	if(letter < 'A' || letter > 'Z'){
-		winx_push_error("Invalid volume letter %c!",letter);
-		goto validate_fail;
-	}
-	if(!nt4_system)
-		if(!get_drive_map(&ProcessDeviceMapInfo)) goto validate_fail;
 	/* set error mode to ignore missing removable drives */
-	if(!set_error_mode(INTERNAL_SEM_FAILCRITICALERRORS)) goto validate_fail;
-	if(!internal_validate_volume(letter,skip_removable,NULL,
-		&ProcessDeviceMapInfo,&FileFsSize,&is_removable)) goto validate_fail;
+	if(winx_set_system_error_mode(INTERNAL_SEM_FAILCRITICALERRORS) < 0)
+		return (-1);
+	if(internal_validate_volume(letter,skip_removable,&is_removable,
+		NULL,NULL,NULL) < 0) return (-1);
 	/* try to restore error mode to default state */
-	if(!set_error_mode(1)){ /* equal to SetErrorMode(0) */
+	if(winx_set_system_error_mode(1) < 0){ /* equal to SetErrorMode(0) */
 		winx_pop_error(NULL,0);
 	}
 	return 0;
-validate_fail:
-	return (-1);
 }
 
-/****f* udefrag.volume/scheduler_get_avail_letters
-* NAME
-*    scheduler_get_avail_letters
-* SYNOPSIS
-*    error = scheduler_get_avail_letters(letters);
-* FUNCTION
-*    Retrieves the string containing available letters.
-* INPUTS
-*    letters - buffer to store resulting string into
-* RESULT
-*    error - zero for success; negative value otherwise.
-* EXAMPLE
-*    char letters[32];
-*    if(scheduler_get_avail_letters(letters) < 0){
-*        udefrag_pop_error(buffer,sizeof(buffer));
-*        // handle error
-*    }
-* NOTES
-*    This function skips all removable drives.
-* SEE ALSO
-*    udefrag_get_avail_volumes, udefrag_validate_volume
-******/
-int __stdcall scheduler_get_avail_letters(char *letters)
+int internal_validate_volume(unsigned char letter,int skip_removable,
+							  int *is_removable,char *fsname,
+							  LARGE_INTEGER *ptotal, LARGE_INTEGER *pfree)
 {
-	volume_info *v;
-	int i;
+	int type;
 
-	if(udefrag_get_avail_volumes(&v,TRUE)) return (-1);
-	for(i = 0;;i++){
-		letters[i] = v[i].letter;
-		if(v[i].letter == 0) break;
+	*is_removable = FALSE;
+	type = winx_get_drive_type(letter);
+	if(type < 0) return (-1);
+	if(type == DRIVE_CDROM || type == DRIVE_REMOTE){
+		winx_push_error("Volume must be on non-cdrom local drive, but it's %u!",type);
+		return (-1);
+	}
+	if(type == DRIVE_ASSIGNED_BY_SUBST_COMMAND){
+		winx_push_error("It seems that volume letter is assigned by \'subst\' command!");
+		return (-1);
+	}
+	if(type == DRIVE_REMOVABLE){
+		*is_removable = TRUE;
+		if(skip_removable){
+			winx_push_error("It's removable volume!");
+			return (-1);
+		}
+	}
+	/* get volume information */
+	if(ptotal && pfree){
+		if(winx_get_volume_size(letter,ptotal,pfree) < 0)
+			return (-1);
+	}
+	if(fsname){
+		if(winx_get_filesystem_name(letter,fsname,MAXFSNAME) < 0)
+			return (-1);
 	}
 	return 0;
 }
 
-BOOL get_drive_map(PROCESS_DEVICEMAP_INFORMATION *pProcessDeviceMapInfo)
-{
-	NTSTATUS Status;
-
-	/* this call is applicable only for w2k and later versions */
-	Status = NtQueryInformationProcess(NtCurrentProcess(),
-					ProcessDeviceMap,
-					pProcessDeviceMapInfo,
-					sizeof(PROCESS_DEVICEMAP_INFORMATION),
-					NULL);
-	if(!NT_SUCCESS(Status)){
-		if(Status == STATUS_INVALID_INFO_CLASS)
-			nt4_system = TRUE;
-		else {
-			winx_push_error("Can't get drive map: %x!",(UINT)Status);
-			return FALSE;
-		}
-	}
-	return TRUE;
-}
-
-BOOL internal_open_rootdir(unsigned char letter,HANDLE *phFile)
-{
-	NTSTATUS Status;
-	short rootpath[] = L"\\??\\A:\\";
-	UNICODE_STRING uStr;
-	OBJECT_ATTRIBUTES ObjectAttributes;
-	IO_STATUS_BLOCK IoStatusBlock;
-
-	rootpath[4] = (short)letter;
-	RtlInitUnicodeString(&uStr,rootpath);
-	InitializeObjectAttributes(&ObjectAttributes,&uStr,
-				   FILE_READ_ATTRIBUTES,NULL,NULL);
-	Status = NtCreateFile(phFile,FILE_GENERIC_READ,
-				&ObjectAttributes,&IoStatusBlock,NULL,0,
-				FILE_SHARE_READ|FILE_SHARE_WRITE,FILE_OPEN,0,
-				NULL,0);
-	if(!NT_SUCCESS(Status)){
-		winx_push_error("Can't open %ls: %x!",rootpath,(UINT)Status);
-		*phFile = NULL;
-		return FALSE;
-	}
-	return TRUE;
-}
-
-/* NOTE: letter must be between 'A' and 'Z' */
-BOOL internal_validate_volume(unsigned char letter,int skip_removable,
-							  char *fsname,
-							  PROCESS_DEVICEMAP_INFORMATION *pProcessDeviceMapInfo,
-							  FILE_FS_SIZE_INFORMATION *pFileFsSize,
-							  int *is_removable)
-{
-	NTSTATUS Status;
-	int type;
-	HANDLE hFile;
-	UNICODE_STRING uStr;
-	ANSI_STRING aStr;
-	IO_STATUS_BLOCK IoStatusBlock;
-	PFILE_FS_ATTRIBUTE_INFORMATION pFileFsAttribute;
-	UCHAR buffer[FS_ATTRIBUTE_BUFFER_SIZE];
-	short str[MAXFSNAME];
-	ULONG length;
-
-	*is_removable = FALSE;
-	type = winx_get_drive_type(letter);
-	if(type == DRIVE_CDROM || type == DRIVE_REMOTE){
-		winx_push_error("Volume must be on non-cdrom local drive, but it's %u!",type);
-		goto invalid_volume;
-	}
-	if(type == DRIVE_ASSIGNED_BY_SUBST_COMMAND){
-		winx_push_error("It seems that volume letter is assigned by \'subst\' command!");
-		goto invalid_volume;
-	}
-	if(type == DRIVE_REMOVABLE) *is_removable = TRUE;
-	if(type == DRIVE_REMOVABLE && skip_removable){
-		winx_push_error("It's removable volume!");
-		goto invalid_volume;
-	}
-	/* get volume information */
-	if(!internal_open_rootdir(letter,&hFile)) goto invalid_volume;
-	Status = NtQueryVolumeInformationFile(hFile,&IoStatusBlock,pFileFsSize,
-				sizeof(FILE_FS_SIZE_INFORMATION),FileFsSizeInformation);
-	if(!NT_SUCCESS(Status)){
-		NtClose(hFile);
-		winx_push_error("Can't get size of volume \'%c\': %x!",letter,(UINT)Status);
-		goto invalid_volume;
-	}
-	if(fsname){
-		fsname[0] = 0;
-		pFileFsAttribute = (PFILE_FS_ATTRIBUTE_INFORMATION)buffer;
-		Status = NtQueryVolumeInformationFile(hFile,&IoStatusBlock,pFileFsAttribute,
-					FS_ATTRIBUTE_BUFFER_SIZE,FileFsAttributeInformation);
-		if(!NT_SUCCESS(Status)){
-			NtClose(hFile);
-			winx_push_error("Can't get file system name for \'%c\': %x!",letter,(UINT)Status);
-			goto invalid_volume;
-		}
-		memcpy(str,pFileFsAttribute->FileSystemName,(MAXFSNAME - 1) * sizeof(short));
-		length = pFileFsAttribute->FileSystemNameLength >> 1;
-		if(length < MAXFSNAME) str[length] = 0;
-		str[MAXFSNAME - 1] = 0;
-		RtlInitUnicodeString(&uStr,str);
-		aStr.Buffer = fsname;
-		aStr.Length = 0;
-		aStr.MaximumLength = MAXFSNAME - 1;
-		if(RtlUnicodeStringToAnsiString(&aStr,&uStr,FALSE) != STATUS_SUCCESS)
-			strcpy(fsname,"????");
-	}
-	NtClose(hFile);
-	return TRUE;
-invalid_volume:
-	return FALSE;
-}
-
-BOOL set_error_mode(UINT uMode)
-{
-	NTSTATUS Status;
-
-	Status = NtSetInformationProcess(NtCurrentProcess(),
-					ProcessDefaultHardErrorMode,
-					(PVOID)&uMode,
-					sizeof(uMode));
-	if(!NT_SUCCESS(Status)){
-		winx_push_error("Can't set error mode %u: %x!",uMode,(UINT)Status);
-		return FALSE;
-	}
-	return TRUE;
-}
+/*
+* This call is practically unuseful, especially on NT 4 system.
+* Removed at 29 Oct 2008.
+*/
+/*BOOL get_drive_map(PROCESS_DEVICEMAP_INFORMATION *pProcessDeviceMapInfo);*/
